k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seminar-hall-booking
  labels:
    name: seminar-hall-booking
